--- a/directbak.yaml
+++ b/directbak.yaml
@@ -53,7 +53,6 @@ payload:
   - '+.008gj.com'
   - '+.009.com'
   - '+.0098118.com'
-  - '+.00991901.com'
   - '+.0099524.com'
   - '+.009y.com'
   - '+.00bx.com'
@@ -1087,7 +1086,6 @@ payload:
   - '+.123hao.com'
   - '+.123hdp.com'
   - '+.123huodong.com'
-  - '+.123lihun.com'
   - '+.123meiyan.com'
   - '+.123menpiao.com'
   - '+.123nice.net'
@@ -1246,7 +1244,6 @@ payload:
   - '+.14498.com'
   - '+.1451cn.com'
   - '+.14583.com'
-  - '+.147xiaoshuo.com'
   - '+.147xs.com'
   - '+.147xs.org'
   - '+.147xz.com'
@@ -1719,6 +1716,7 @@ payload:
   - '+.18yl.com'
   - '+.18zhuanqian.com'
   - '+.18zw.com'
+  - '+.1900.live'
   - '+.1903it.com'
   - '+.1905.com'
   - '+.190757.com'
@@ -1754,7 +1752,6 @@ payload:
   - '+.1988wp.com'
   - '+.198game.com'
   - '+.198game.net'
-  - '+.198w.net'
   - '+.1992mu.com'
   - '+.199508.com'
   - '+.1997sty.com'
@@ -2603,7 +2600,6 @@ payload:
   - '+.31xjd.com'
   - '+.31xs.com'
   - '+.31xs.net'
-  - '+.31xs.org'
   - '+.31yarn.com'
   - '+.31yj.com'
   - '+.31zscl.com'
@@ -3528,7 +3524,6 @@ payload:
   - '+.49358.com'
   - '+.49363.com'
   - '+.4948.com'
-  - '+.4949567.com'
   - '+.49644913.com'
   - '+.496601.com'
   - '+.497-img.com'
@@ -7099,7 +7094,6 @@ payload:
   - '+.9juewu.com'
   - '+.9jx.com'
   - '+.9k9k.com'
-  - '+.9k9ms.com'
   - '+.9kd.com'
   - '+.9kld.com'
   - '+.9ku.com'
@@ -14579,7 +14573,6 @@ payload:
   - '+.chixm.com'
   - '+.chiyuebing.com'
   - '+.chiyuekj.com'
-  - '+.chiyuewenhua.com'
   - '+.chizhouchacha.com'
   - '+.chizhoujob.com'
   - '+.chizhouren.com'
@@ -15971,7 +15964,6 @@ payload:
   - '+.codejie.net'
   - '+.codekissyoung.com'
   - '+.codekk.com'
-  - '+.codeku.me'
   - '+.codelover.link'
   - '+.codemany.com'
   - '+.codemart.com'
@@ -17566,7 +17558,6 @@ payload:
   - '+.dashengpan.com'
   - '+.dashenquan.com'
   - '+.dashentv.com'
-  - '+.dashenxiaoshuo.com'
   - '+.dashet.com'
   - '+.dashgame.com'
   - '+.dashi.com'
@@ -19953,7 +19944,6 @@ payload:
   - '+.easy888.com'
   - '+.easyai.tech'
   - '+.easyaq.com'
-  - '+.easyaq.org'
   - '+.easyar.com'
   - '+.easyarvr.com'
   - '+.easybug.org'
@@ -21994,6 +21984,7 @@ payload:
   - '+.finansbankservices.net'
   - '+.finchain.info'
   - '+.finchina.com'
+  - '+.finclip.com'
   - '+.finctive.com'
   - '+.finderweb.net'
   - '+.findhro.com'
@@ -23300,7 +23291,6 @@ payload:
   - '+.gdkz88.com'
   - '+.gdlalian.com'
   - '+.gdlins.com'
-  - '+.gdlppow.com'
   - '+.gdls114.com'
   - '+.gdlsgz.com'
   - '+.gdmappress.com'
@@ -25168,7 +25158,6 @@ payload:
   - '+.haha365.com'
   - '+.haha9911.com'
   - '+.hahack.com'
-  - '+.hahadiaoyu.com'
   - '+.hahaha365.com'
   - '+.hahait.com'
   - '+.hahasou.com'
@@ -25238,7 +25227,6 @@ payload:
   - '+.haimacloud.com'
   - '+.haimawan.com'
   - '+.haimi.com'
-  - '+.haimii.com'
   - '+.haiming-cn.com'
   - '+.haimini.com'
   - '+.haina.com'
@@ -26961,7 +26949,6 @@ payload:
   - '+.hndnews.com'
   - '+.hndpx.com'
   - '+.hndt.com'
-  - '+.hndtl.com'
   - '+.hnehome.net'
   - '+.hnemb.com'
   - '+.hnetn.com'
@@ -27060,6 +27047,7 @@ payload:
   - '+.hntobacco.com'
   - '+.hntv.tv'
   - '+.hntvjiaotong.com'
+  - '+.hntxxy.com'
   - '+.hnwisecom.com'
   - '+.hnwlcm.com'
   - '+.hnwlxh.net'
@@ -27596,7 +27584,6 @@ payload:
   - '+.htguosheng.com'
   - '+.htgwf.com'
   - '+.hthdo.com'
-  - '+.hthl.net'
   - '+.htidc.com'
   - '+.htinfor.com'
   - '+.htinns.com'
@@ -29137,7 +29124,6 @@ payload:
   - '+.idealeer.com'
   - '+.idealshanghai.com'
   - '+.ideanote.cc'
-  - '+.ideaparfums.com'
   - '+.ideappt.com'
   - '+.ideasandroid.com'
   - '+.ideazhao.com'
@@ -29566,6 +29552,7 @@ payload:
   - '+.ikx.me'
   - '+.il8r.com'
   - '+.ilab-x.com'
+  - '+.ilabilab.com'
   - '+.ilaic.org'
   - '+.ilaisa.com'
   - '+.ilaitui.com'
@@ -33474,7 +33461,6 @@ payload:
   - '+.kaopubao.com'
   - '+.kaopubao.net'
   - '+.kaopuj.com'
-  - '+.kaopuwangzhuan.com'
   - '+.kaopuyun.com'
   - '+.kaopuyun.net'
   - '+.kaoqin.com'
@@ -38187,6 +38173,7 @@ payload:
   - '+.meitushop.com'
   - '+.meitustat.com'
   - '+.meituyun.com'
+  - '+.meiweifood.xyz'
   - '+.meiweis.com'
   - '+.meiweishudan.com'
   - '+.meiwenting.com'
@@ -38763,6 +38750,7 @@ payload:
   - '+.minzu56.net'
   - '+.miospay.com'
   - '+.miot-spec.org'
+  - '+.mipa.fun'
   - '+.mipacc.com'
   - '+.mipang.com'
   - '+.mipangwang.com'
@@ -40715,7 +40703,6 @@ payload:
   - '+.njzdsp.com'
   - '+.njzhzx.net'
   - '+.njzztyl.com'
-  - '+.nk84.com'
   - '+.nkscdn.com'
   - '+.nktxv.com'
   - '+.nkyp.com'
@@ -49521,6 +49508,7 @@ payload:
   - '+.sudu-sq56.com'
   - '+.sudu-tf42.com'
   - '+.sudu-xu9b.com'
+  - '+.sudu-y94k.com'
   - '+.sudu123.net'
   - '+.suducha.com'
   - '+.sududa.com'
@@ -50242,7 +50230,6 @@ payload:
   - '+.szniego.com'
   - '+.szniushi.com'
   - '+.sznlgg.com'
-  - '+.sznmd.com'
   - '+.szns-marathon.com'
   - '+.szol.net'
   - '+.szolxd.com'
@@ -52059,6 +52046,7 @@ payload:
   - '+.toycloud.com'
   - '+.toyean.com'
   - '+.toysir.com'
+  - '+.tp-linkscm.com'
   - '+.tp8.me'
   - '+.tpbook.com'
   - '+.tpengyun.com'
@@ -53877,6 +53865,7 @@ payload:
   - '+.vijos.org'
   - '+.vikduo.com'
   - '+.vikecn.com'
+  - '+.vilipix.com'
   - '+.villaday.com'
   - '+.villafrancescatti.com'
   - '+.viltd.com'
@@ -54417,6 +54406,7 @@ payload:
   - '+.wan.cc'
   - '+.wan.com'
   - '+.wan.wang'
+  - '+.wan1234.com'
   - '+.wan160.com'
   - '+.wan25.com'
   - '+.wan32.com'
@@ -55089,6 +55079,7 @@ payload:
   - '+.weimobwmc.com'
   - '+.weinisongdu.com'
   - '+.weinovel.cc'
+  - '+.weio6nkoe.cyou'
   - '+.weiot.net'
   - '+.weipaitang.com'
   - '+.weiphone.net'
@@ -55149,6 +55140,7 @@ payload:
   - '+.weixianzhuan.com'
   - '+.weixiaoduo.com'
   - '+.weixiaohan.com'
+  - '+.weixiaoi.com'
   - '+.weixiaotong.com'
   - '+.weixiaotuoke.tech'
   - '+.weixiaov.club'
@@ -55648,7 +55640,6 @@ payload:
   - '+.whmeigao.com'
   - '+.whmj.org'
   - '+.whmlcy.net'
-  - '+.whmn.shop'
   - '+.whmnls.com'
   - '+.whmnrc.com'
   - '+.whmnx.com'
@@ -59422,7 +59413,6 @@ payload:
   - '+.xxmh268.com'
   - '+.xxmh330.com'
   - '+.xxmh460.com'
-  - '+.xxmh730.com'
   - '+.xxmishu.com'
   - '+.xxnets.net'
   - '+.xxnmcd.com'
@@ -59858,6 +59848,7 @@ payload:
   - '+.yaoyouke.com'
   - '+.yaoyuanba.com'
   - '+.yaozh.com'
+  - '+.yaozhixiang.com'
   - '+.yaozs.com'
   - '+.yareiot.com'
   - '+.yarnn.com'
@@ -60527,7 +60518,6 @@ payload:
   - '+.yingpaigame.com'
   - '+.yingshe.com'
   - '+.yingsheng.com'
-  - '+.yingshengyl.com'
   - '+.yingshiborui.com'
   - '+.yingshixiaoshuo.com'
   - '+.yingshiyou.com'
@@ -61954,7 +61944,6 @@ payload:
   - '+.yunbiaozhun.com'
   - '+.yunbiji.com'
   - '+.yunbook.vip'
-  - '+.yunbook123.com'
   - '+.yuncai5.com'
   - '+.yuncaijing.com'
   - '+.yuncdn.bid'
@@ -62162,7 +62151,6 @@ payload:
   - '+.yunyihudong.com'
   - '+.yunyijk.com'
   - '+.yunyin.org'
-  - '+.yunying166.com'
   - '+.yunyingdashu.com'
   - '+.yunyingketang.com'
   - '+.yunyingmiao.com'
@@ -63780,7 +63768,6 @@ payload:
   - '+.zhoulingjie.com'
   - '+.zhoushangren.com'
   - '+.zhoushengfe.com'
-  - '+.zhouxiao.me'
   - '+.zhouxingchi.info'
   - '+.zhouxuanyu.com'
   - '+.zhouyi.biz'
@@ -65169,7 +65156,6 @@ payload:
   - '+.zyyfy.com'
   - '+.zyz119.com'
   - '+.zyzaojiao.com'
-  - '+.zyzg.com'
   - '+.zyzhan.com'
   - '+.zyzhyl.com'
   - '+.zyzj.org'
