--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1745,7 +1745,6 @@ payload:
   - '+.198526.net'
   - '+.1985cd.com'
   - '+.1985t.com'
-  - '+.1987.name'
   - '+.1988.tv'
   - '+.19888.tv'
   - '+.1988wp.com'
@@ -2220,7 +2219,6 @@ payload:
   - '+.23sk.com'
   - '+.23tgo.com'
   - '+.23txt.com'
-  - '+.23us.cc'
   - '+.23us.la'
   - '+.23us.so'
   - '+.23us.tv'
@@ -2478,7 +2476,6 @@ payload:
   - '+.2xd.net'
   - '+.2xiazai.com'
   - '+.2y9y.com'
-  - '+.2yuanma.com'
   - '+.2yuanyy.com'
   - '+.2yun.com'
   - '+.2yup.com'
@@ -4251,7 +4248,6 @@ payload:
   - '+.520101.com'
   - '+.520520520520520.com'
   - '+.520520bo.com'
-  - '+.5207758.com'
   - '+.52091w.com'
   - '+.520990.com'
   - '+.520apk.com'
@@ -6408,7 +6404,6 @@ payload:
   - '+.916m.com'
   - '+.917.com'
   - '+.9170.com'
-  - '+.917118.com'
   - '+.917558.com'
   - '+.917ka.com'
   - '+.917st.com'
@@ -8119,7 +8114,6 @@ payload:
   - '+.akswe.com'
   - '+.aksxw.com'
   - '+.aku.pub'
-  - '+.akuaikan.com'
   - '+.akuziti.com'
   - '+.akyiyou.com'
   - '+.akylq.com'
@@ -9625,6 +9619,7 @@ payload:
   - '+.baidudaquan.com'
   - '+.baidufe.com'
   - '+.baidufree.com'
+  - '+.baidui.vip'
   - '+.baidulook.com'
   - '+.baidunongmin.com'
   - '+.baiduor.com'
@@ -10915,7 +10910,6 @@ payload:
   - '+.biqwo.com'
   - '+.biransign.com'
   - '+.bird4d.com'
-  - '+.birdbro.com'
   - '+.birdol.com'
   - '+.birdpush.com'
   - '+.birentech.com'
@@ -11281,7 +11275,6 @@ payload:
   - '+.bjzcth.com'
   - '+.bjzg.org'
   - '+.bjzghd.com'
-  - '+.bjzgxr.net'
   - '+.bjzhishi.com'
   - '+.bjzhongyi.com'
   - '+.bjzjgyl.com'
@@ -12310,7 +12303,6 @@ payload:
   - '+.caigoushichang.com'
   - '+.caiguayun.com'
   - '+.caihang.com'
-  - '+.caihao.com'
   - '+.caihcom.com'
   - '+.caihezi.com'
   - '+.caihong5g.com'
@@ -14600,7 +14592,6 @@ payload:
   - '+.chnp2p.com'
   - '+.chnpac.com'
   - '+.chnpec.com'
-  - '+.chnpic.net'
   - '+.chnppmuseum.com'
   - '+.chnroad.com'
   - '+.chnsuv.com'
@@ -16566,7 +16557,6 @@ payload:
   - '+.crystalcg.com'
   - '+.crystaledu.com'
   - '+.cryuantafund.com'
-  - '+.cryy120.com'
   - '+.cs-air.com'
   - '+.cs-cjl.com'
   - '+.cs-show.com'
@@ -17068,7 +17058,6 @@ payload:
   - '+.cz365.com'
   - '+.cz8.com'
   - '+.cz89.com'
-  - '+.czainuo.com'
   - '+.czb365.com'
   - '+.czbanbantong.com'
   - '+.czbank.com'
@@ -18054,7 +18043,6 @@ payload:
   - '+.dezhongmobi.com'
   - '+.dezhoudaily.com'
   - '+.dezhounuoda.com'
-  - '+.dezhouqh.com'
   - '+.dezhuyun.com'
   - '+.df81.com'
   - '+.df9377.com'
@@ -18950,7 +18938,6 @@ payload:
   - '+.donghaifunds.com'
   - '+.donghao.org'
   - '+.donghongqiao.com'
-  - '+.donghuaxsp.com'
   - '+.donghulvdao.com'
   - '+.dongjinyu.com'
   - '+.dongjun.cc'
@@ -22000,7 +21987,6 @@ payload:
   - '+.fingertc.com'
   - '+.fingu.com'
   - '+.fingu.net'
-  - '+.finlayliu.com'
   - '+.finndy.com'
   - '+.finogeeks.com'
   - '+.finshell-cib.com'
@@ -26878,7 +26864,6 @@ payload:
   - '+.hlytec.com'
   - '+.hlyy.in'
   - '+.hlzq.com'
-  - '+.hlzsgw.com'
   - '+.hm-3223.net'
   - '+.hm120.com'
   - '+.hm16888.net'
@@ -27641,7 +27626,6 @@ payload:
   - '+.huada120.com'
   - '+.huadan.com'
   - '+.huadehyd.com'
-  - '+.huadiandanbao.com'
   - '+.huadonghospital.com'
   - '+.huadongmedia.com'
   - '+.huadoo.com'
@@ -28139,7 +28123,6 @@ payload:
   - '+.hunbei5.com'
   - '+.hunbohui.info'
   - '+.hunbys.com'
-  - '+.huncct.com'
   - '+.hunche.net'
   - '+.hunchelaila.com'
   - '+.hundredcent.com'
@@ -28553,6 +28536,7 @@ payload:
   - '+.hzh1.com'
   - '+.hzhadx.com'
   - '+.hzhanbo.com'
+  - '+.hzhengtong.com'
   - '+.hzhfzx.com'
   - '+.hzhike.com'
   - '+.hzhisoft.com'
@@ -31569,7 +31553,6 @@ payload:
   - '+.jiliguala.com'
   - '+.jiliguara.xyz'
   - '+.jilingwy.org'
-  - '+.jilinoffcn.com'
   - '+.jilinpujiyiyuan.com'
   - '+.jilinwula.com'
   - '+.jiliyun.com'
@@ -32254,7 +32237,6 @@ payload:
   - '+.jntyhl.com'
   - '+.jnw.cc'
   - '+.jnwb.net'
-  - '+.jnxmycnc.com'
   - '+.jnyestar.com'
   - '+.jnzcsyj.com'
   - '+.jnzfwz.com'
@@ -33329,7 +33311,6 @@ payload:
   - '+.kan.cc'
   - '+.kan0512.com'
   - '+.kan300.com'
-  - '+.kan84.net'
   - '+.kanbaobei.com'
   - '+.kanbardata.com'
   - '+.kanbing.net'
@@ -33428,7 +33409,6 @@ payload:
   - '+.kaobeitu.com'
   - '+.kaocat.com'
   - '+.kaochong.com'
-  - '+.kaoder.com'
   - '+.kaogua.com'
   - '+.kaojionline.com'
   - '+.kaola.com.hk'
@@ -37876,7 +37856,6 @@ payload:
   - '+.mcake.com'
   - '+.mcarding.com'
   - '+.mcbbs.net'
-  - '+.mccaee.com'
   - '+.mcchcdn.com'
   - '+.mcchina.com'
   - '+.mcchou.com'
@@ -38665,7 +38644,6 @@ payload:
   - '+.mingrenteahouse.com'
   - '+.mingrenxiang.com'
   - '+.mingricctv.com'
-  - '+.mingritouban.com'
   - '+.mingshiedu.com'
   - '+.mingshijt.com'
   - '+.mingsoft.net'
@@ -39631,7 +39609,6 @@ payload:
   - '+.my089.com'
   - '+.my120.org'
   - '+.my1616.net'
-  - '+.my253537.com'
   - '+.my285.com'
   - '+.my2852.com'
   - '+.my2space.com'
@@ -41447,7 +41424,6 @@ payload:
   - '+.onmpw.com'
   - '+.ono-bbb.com'
   - '+.ononw.com'
-  - '+.onqc.com'
   - '+.onszln.com'
   - '+.ontheroadstore.com'
   - '+.onthink.com'
@@ -43541,7 +43517,6 @@ payload:
   - '+.qgbtd.com'
   - '+.qgbzyzl.com'
   - '+.qgcyjq.org'
-  - '+.qgdyc.net'
   - '+.qgdz222.com'
   - '+.qgenius.com'
   - '+.qgpx.com'
@@ -44905,7 +44880,6 @@ payload:
   - '+.qzcklm.com'
   - '+.qzclfc.com'
   - '+.qzdigg.com'
-  - '+.qzdwz.com'
   - '+.qzdyyy.com'
   - '+.qzfxyy.com'
   - '+.qzhlkj.net'
@@ -45824,7 +45798,6 @@ payload:
   - '+.runsky.com'
   - '+.runtimeedu.com'
   - '+.runtimewh.com'
-  - '+.runtonggroup.com'
   - '+.runtronic.com'
   - '+.runwise.co'
   - '+.runwith.cc'
@@ -47705,7 +47678,6 @@ payload:
   - '+.shuangkuai.co'
   - '+.shuangmei2008.com'
   - '+.shuangtao.com'
-  - '+.shuangtv.net'
   - '+.shuangxian.com'
   - '+.shuangxinhui.com'
   - '+.shuangyingsx.com'
@@ -48641,6 +48613,7 @@ payload:
   - '+.snowballtech.com'
   - '+.snowdream.tech'
   - '+.snowyimall.com'
+  - '+.snps.tech'
   - '+.snrat.com'
   - '+.snren.com'
   - '+.snrtv.com'
@@ -49981,7 +49954,6 @@ payload:
   - '+.syjzedu.com'
   - '+.sykong.com'
   - '+.sylixos.com'
-  - '+.syltdj.com'
   - '+.symama.com'
   - '+.symtc.com'
   - '+.symuge.com'
@@ -51112,7 +51084,6 @@ payload:
   - '+.thearenacapital.com'
   - '+.thearyong.com'
   - '+.theateliercouture.com'
-  - '+.thebabaoffatherofson.com'
   - '+.thebeastshop.com'
   - '+.thebeautools.com'
   - '+.thebeijinger.com'
@@ -51748,7 +51719,6 @@ payload:
   - '+.tok9.com'
   - '+.token-ad.com'
   - '+.tokenglish.com'
-  - '+.tokenpocket.pro'
   - '+.tokensky.net'
   - '+.tokenworld.pro'
   - '+.tokimekiclub.org'
@@ -54075,7 +54045,6 @@ payload:
   - '+.vooec.com'
   - '+.voole.com'
   - '+.voole.net'
-  - '+.voora.net'
   - '+.voovlive.com'
   - '+.voovmeeting.com'
   - '+.vortexfun.com'
@@ -57471,7 +57440,6 @@ payload:
   - '+.xhup.club'
   - '+.xhwhouse.com'
   - '+.xhxsw.com'
-  - '+.xhxswz.com'
   - '+.xhxw.com'
   - '+.xhy.com'
   - '+.xhy998.com'
@@ -59386,7 +59354,6 @@ payload:
   - '+.xxmh223.com'
   - '+.xxmh225.com'
   - '+.xxmh226.com'
-  - '+.xxmh268.com'
   - '+.xxmh330.com'
   - '+.xxmh460.com'
   - '+.xxmishu.com'
@@ -59919,7 +59886,6 @@ payload:
   - '+.ycloudvip.com'
   - '+.yclunwen.com'
   - '+.ycmbcd.com'
-  - '+.ycnuli.com'
   - '+.ycoem.net'
   - '+.ycool.com'
   - '+.ycpack.net'
@@ -63143,7 +63109,6 @@ payload:
   - '+.zhaobeidaxiao.com'
   - '+.zhaobeijing.com'
   - '+.zhaobuxiu.com'
-  - '+.zhaocaihr.com'
   - '+.zhaocait.com'
   - '+.zhaocaiyan.com'
   - '+.zhaochafa.com'
@@ -64824,7 +64789,6 @@ payload:
   - '+.zui88.com'
   - '+.zuiben.com'
   - '+.zuibook.com'
-  - '+.zuichen.net'
   - '+.zuicool.com'
   - '+.zuidabao.com'
   - '+.zuidaima.com'
