--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3576,6 +3576,7 @@ payload:
   - '+.4yx.com'
   - '+.5-link.com'
   - '+.50-jia.com'
+  - '+.500.com'
   - '+.5000.com'
   - '+.50004.com'
   - '+.5000yan.com'
@@ -4112,7 +4113,6 @@ payload:
   - '+.51ttxue.com'
   - '+.51tuiyi.com'
   - '+.51tunhuo.com'
-  - '+.51tuz.com'
   - '+.51tv.com'
   - '+.51tv.net'
   - '+.51tvbao.com'
@@ -4748,7 +4748,6 @@ payload:
   - '+.5858.com'
   - '+.58611.net'
   - '+.5866.com'
-  - '+.58801hn.com'
   - '+.5884.com'
   - '+.5888.tv'
   - '+.588991.com'
@@ -5107,6 +5106,7 @@ payload:
   - '+.612459.com'
   - '+.6137.net'
   - '+.61611.net'
+  - '+.616182863.com'
   - '+.6164.com'
   - '+.61658.com'
   - '+.6168511.com'
@@ -5558,6 +5558,7 @@ payload:
   - '+.732732.com'
   - '+.734969.com'
   - '+.7360.cc'
+  - '+.73652253191.com'
   - '+.737.com'
   - '+.73789.com'
   - '+.7384tv.com'
@@ -7471,7 +7472,6 @@ payload:
   - '+.adquan.com'
   - '+.ads8.com'
   - '+.adsage.com'
-  - '+.adsagedsp.com'
   - '+.adsame.com'
   - '+.adscover.com'
   - '+.adsjdy.com'
@@ -8434,6 +8434,7 @@ payload:
   - '+.aminglinux.com'
   - '+.amo9.com'
   - '+.amobbs.com'
+  - '+.amoe.cc'
   - '+.amon.org'
   - '+.amon1997.com'
   - '+.ampc8.com'
@@ -8519,7 +8520,6 @@ payload:
   - '+.angli.me'
   - '+.anglo-chinese.com'
   - '+.angogotech.net'
-  - '+.angroups.com'
   - '+.angruo.com'
   - '+.angrymiao.com'
   - '+.anguanjia.com'
@@ -9143,6 +9143,7 @@ payload:
   - '+.asimi8.com'
   - '+.askci.com'
   - '+.asketchup.com'
+  - '+.askk.cc'
   - '+.asklib.com'
   - '+.asklicai.com'
   - '+.askmaclean.com'
@@ -9788,7 +9789,6 @@ payload:
   - '+.bamatea.com'
   - '+.bamaying.com'
   - '+.bamboo18.com'
-  - '+.bamenzhushou.com'
   - '+.bamuyu.com'
   - '+.bamxs.com'
   - '+.bananalighter.com'
@@ -10742,6 +10742,7 @@ payload:
   - '+.bilibiligame.net'
   - '+.bilibilihelper.com'
   - '+.bilibilijj.com'
+  - '+.bilibilis0.one'
   - '+.bilibiliyoo.com'
   - '+.bilicdn1.com'
   - '+.bilicdn2.com'
@@ -12384,6 +12385,7 @@ payload:
   - '+.camnpr.com'
   - '+.campanilechina.com'
   - '+.campus-app.net'
+  - '+.campuschina.org'
   - '+.campushoy.com'
   - '+.campusphere.net'
   - '+.campusplus.com'
@@ -13759,6 +13761,7 @@ payload:
   - '+.chezizhu.com'
   - '+.chgcis.com'
   - '+.chgcw.com'
+  - '+.chghouse.org'
   - '+.chgjedu.com'
   - '+.chgreenway.com'
   - '+.chhblog.com'
@@ -16383,7 +16386,6 @@ payload:
   - '+.cqph.com'
   - '+.cqpix.com'
   - '+.cqpost.com'
-  - '+.cqqc3.com'
   - '+.cqqigao.com'
   - '+.cqqiyi.com'
   - '+.cqqnb.net'
@@ -16455,7 +16457,6 @@ payload:
   - '+.craftcontact.com'
   - '+.crandom.com'
   - '+.crazepony.com'
-  - '+.crazydyz.cc'
   - '+.crazyenglish.org'
   - '+.crazyflasher.com'
   - '+.crazyphper.com'
@@ -16832,7 +16833,6 @@ payload:
   - '+.culaiwan.com'
   - '+.cumtenn.com'
   - '+.cumulon.com'
-  - '+.cun58.com'
   - '+.cunan.com'
   - '+.cuncun8.com'
   - '+.cuncunle.com'
@@ -17940,7 +17940,6 @@ payload:
   - '+.dengxiaolong.com'
   - '+.dengxiaopingnet.com'
   - '+.dentistshow.com'
-  - '+.denuoexpo.com'
   - '+.deosin.com'
   - '+.dep-star.com'
   - '+.depeat.com'
@@ -21356,7 +21355,6 @@ payload:
   - '+.fankhome.com'
   - '+.fanli.com'
   - '+.fanli001.net'
-  - '+.fanlibang.com'
   - '+.fanlibei.com'
   - '+.fanlicome.com'
   - '+.fanligame.com'
@@ -22128,7 +22126,6 @@ payload:
   - '+.flooc.com'
   - '+.floorb2b.com'
   - '+.florentiavillage.com'
-  - '+.flower-med.com'
   - '+.flower188.com'
   - '+.flower33.com'
   - '+.flowerku.fun'
@@ -22302,7 +22299,6 @@ payload:
   - '+.foscam.com'
   - '+.foshanaosibo.com'
   - '+.foshanmuseum.com'
-  - '+.foshannet.com'
   - '+.foshannews.com'
   - '+.foshannews.net'
   - '+.fosss.org'
@@ -24474,7 +24470,6 @@ payload:
   - '+.gudage.cc'
   - '+.gudaovision.com'
   - '+.gudi.cc'
-  - '+.gudianhr.com'
   - '+.guduodata.com'
   - '+.guestops.com'
   - '+.gufengmh.com'
@@ -24887,6 +24882,7 @@ payload:
   - '+.gzjykj.com'
   - '+.gzjzc.com'
   - '+.gzkz88.com'
+  - '+.gzlex.com'
   - '+.gzlingli.com'
   - '+.gzlujiao.com'
   - '+.gzlz307.com'
@@ -25827,7 +25823,6 @@ payload:
   - '+.hbkqw.com'
   - '+.hbksw.com'
   - '+.hbky.com'
-  - '+.hbla.net'
   - '+.hblccy.com'
   - '+.hbliti.com'
   - '+.hblszq.com'
@@ -25968,7 +25963,6 @@ payload:
   - '+.hcqixinhb.com'
   - '+.hcshebao.com'
   - '+.hcsilk.com'
-  - '+.hcsindex.org'
   - '+.hcstzz.com'
   - '+.hctxf.org'
   - '+.hcty.com'
@@ -27004,7 +26998,6 @@ payload:
   - '+.hnyuanyou.com'
   - '+.hnyumantang.com'
   - '+.hnyunji.com'
-  - '+.hnyunww.com'
   - '+.hnyunzhiyi.com'
   - '+.hnyyss.com'
   - '+.hnzhaobiao.com'
@@ -27779,6 +27772,7 @@ payload:
   - '+.huawangzhixun.com'
   - '+.huawanyun.com'
   - '+.huawei-3com.com'
+  - '+.huawei.co'
   - '+.huawei.com'
   - '+.huaweicloud-dns.com'
   - '+.huaweicloud-dns.net'
@@ -28475,6 +28469,7 @@ payload:
   - '+.hzccb.net'
   - '+.hzccnet.com'
   - '+.hzcekong.com'
+  - '+.hzchengdun.com'
   - '+.hzcnc.com'
   - '+.hzcopyright.com'
   - '+.hzcourse.com'
@@ -29706,7 +29701,6 @@ payload:
   - '+.impnails.com'
   - '+.impng.com'
   - '+.impopper.com'
-  - '+.importnew.com'
   - '+.improd.works'
   - '+.impta.com'
   - '+.imqq.com'
@@ -31444,7 +31438,6 @@ payload:
   - '+.jiepeng023.com'
   - '+.jieqi.com'
   - '+.jieqinwang.com'
-  - '+.jieseba.org'
   - '+.jieshimt8.com'
   - '+.jieshu.me'
   - '+.jieshui8.com'
@@ -33082,7 +33075,6 @@ payload:
   - '+.jzchou.com'
   - '+.jzclassroom.com'
   - '+.jzcxptm.com'
-  - '+.jzcyrl.com'
   - '+.jzdhyl.com'
   - '+.jzedu24.com'
   - '+.jzerp.com'
@@ -34516,6 +34508,7 @@ payload:
   - '+.kvov.com'
   - '+.kvov.org'
   - '+.kwaicdn.com'
+  - '+.kwaigobuy.com'
   - '+.kwaisczway7r4tz7m8.com'
   - '+.kwaishop.com'
   - '+.kwaixiaodian.com'
@@ -35237,6 +35230,7 @@ payload:
   - '+.leitool.com'
   - '+.leiue.com'
   - '+.leixue.com'
+  - '+.leiyouxi.com'
   - '+.leiyunge.com'
   - '+.leiyunge.net'
   - '+.lejiachao.com'
@@ -36398,7 +36392,6 @@ payload:
   - '+.logodashi.com'
   - '+.logohhh.com'
   - '+.logoly.pro'
-  - '+.logonc.com'
   - '+.logopay.com'
   - '+.logoquan.com'
   - '+.logoshe.com'
@@ -37941,7 +37934,6 @@ payload:
   - '+.meianjuwang.com'
   - '+.meiaoju.com'
   - '+.meibai14.com'
-  - '+.meibaninc.com'
   - '+.meibanlu.com'
   - '+.meibg.com'
   - '+.meican.com'
@@ -38033,6 +38025,7 @@ payload:
   - '+.meimeio.com'
   - '+.meimingteng.com'
   - '+.meingrace.com'
+  - '+.meinuo123.com'
   - '+.meinv.com'
   - '+.meinv.page'
   - '+.meip0.me'
@@ -38837,6 +38830,7 @@ payload:
   - '+.mmbread.com'
   - '+.mmc-data.com'
   - '+.mmcctuia2.com'
+  - '+.mmcos.com'
   - '+.mmcxu.com'
   - '+.mmfad.com'
   - '+.mmfang.cc'
@@ -40265,7 +40259,6 @@ payload:
   - '+.newdun.net'
   - '+.newer2001.com'
   - '+.newfavor.net'
-  - '+.newgamer.com'
   - '+.newhopeagri.com'
   - '+.newhopegroup.com'
   - '+.newhtml.net'
@@ -40969,7 +40962,6 @@ payload:
   - '+.nxnews.net'
   - '+.nxnresearch.com'
   - '+.nxol.net'
-  - '+.nxpic.org'
   - '+.nxrrvmy.com'
   - '+.nxsks.com'
   - '+.nxtianshangb.com'
@@ -40990,6 +40982,7 @@ payload:
   - '+.nyist.net'
   - '+.nync.com'
   - '+.nypd520.com'
+  - '+.nyq.ink'
   - '+.nyrsksw.com'
   - '+.nyshszh.com'
   - '+.nysmfc.com'
@@ -43132,6 +43125,7 @@ payload:
   - '+.pujiaba.com'
   - '+.pujiahh.com'
   - '+.pukinte.com'
+  - '+.pule.com'
   - '+.pulisi.com'
   - '+.pullwave.com'
   - '+.pullword.com'
@@ -43528,7 +43522,6 @@ payload:
   - '+.qhres2.com'
   - '+.qhrmyy.net'
   - '+.qhscw.net'
-  - '+.qhserver.com'
   - '+.qhsetup.com'
   - '+.qhsklw.com'
   - '+.qhstatic.com'
@@ -44121,7 +44114,6 @@ payload:
   - '+.qj26.com'
   - '+.qjbian.com'
   - '+.qjcz.com'
-  - '+.qjdywhyq.com'
   - '+.qjfy.com'
   - '+.qjherb.com'
   - '+.qjhlw.com'
@@ -45911,6 +45903,7 @@ payload:
   - '+.sainacoffee.com'
   - '+.saintcos.hk'
   - '+.saintic.com'
+  - '+.saipu88.com'
   - '+.saipujianshen.com'
   - '+.saipujiaoyu.com'
   - '+.sairaicc.com'
@@ -47756,7 +47749,6 @@ payload:
   - '+.shunwang.com'
   - '+.shuo6.com'
   - '+.shuo66.com'
-  - '+.shuoas.com'
   - '+.shuoba.org'
   - '+.shuobao.com'
   - '+.shuobofootball.xyz'
@@ -49426,6 +49418,7 @@ payload:
   - '+.sugou.com'
   - '+.suhaodian.com'
   - '+.suhuibao.com'
+  - '+.suhuikj.com'
   - '+.suhuishou.com'
   - '+.sui.com'
   - '+.suibianla.com'
@@ -49978,7 +49971,6 @@ payload:
   - '+.sz1978.com'
   - '+.sz240.com'
   - '+.sz315.org'
-  - '+.sz4db.com'
   - '+.sz5156.com'
   - '+.sz5983.com'
   - '+.sz61.com'
@@ -50868,7 +50860,6 @@ payload:
   - '+.tendawifi.com'
   - '+.tendcode.com'
   - '+.tenddata.com'
-  - '+.tenfafa.com'
   - '+.tenganxinxi.com'
   - '+.tengattack.com'
   - '+.tengbai-it.com'
@@ -51839,6 +51830,7 @@ payload:
   - '+.topwanwan.com'
   - '+.topway.org'
   - '+.topwaysoft.com'
+  - '+.topwinfo.com'
   - '+.topys.com'
   - '+.topzj.com'
   - '+.torovo.com'
@@ -52786,6 +52778,7 @@ payload:
   - '+.u9time.com'
   - '+.u9u8.com'
   - '+.u9u9.com'
+  - '+.u9wan.com'
   - '+.ua168.com'
   - '+.uami-global.org'
   - '+.uao-online.com'
@@ -53972,7 +53965,6 @@ payload:
   - '+.volmoe.com'
   - '+.voltmemo.com'
   - '+.volumes.cc'
-  - '+.von-sh.com'
   - '+.vonets.com'
   - '+.vonwei.com'
   - '+.vooec.com'
@@ -58481,7 +58473,6 @@ payload:
   - '+.xjbmaker.com'
   - '+.xjbuluo.com'
   - '+.xjc18.com'
-  - '+.xjcbt.com'
   - '+.xjcc.net'
   - '+.xjche365.com'
   - '+.xjcmtj.com'
@@ -58517,7 +58508,6 @@ payload:
   - '+.xjmglr.com'
   - '+.xjmty.com'
   - '+.xjmw.net'
-  - '+.xjorsa.net'
   - '+.xjpdf.com'
   - '+.xjphsd.com'
   - '+.xjr2018.com'
@@ -60060,7 +60050,6 @@ payload:
   - '+.ygjj.com'
   - '+.ygjoy.com'
   - '+.ygo.wiki'
-  - '+.ygodl.com'
   - '+.ygread.com'
   - '+.ygsdmedia.com'
   - '+.ygshangjie.com'
@@ -60754,7 +60743,6 @@ payload:
   - '+.yldh.cc'
   - '+.yle888.vip'
   - '+.ylfx.com'
-  - '+.ylg877.com'
   - '+.ylghsj.com'
   - '+.ylgj.com'
   - '+.ylhaitao.com'
@@ -61954,6 +61942,7 @@ payload:
   - '+.yunqikecrm.com'
   - '+.yunqingugm.com'
   - '+.yunqishi.net'
+  - '+.yunqishi8.com'
   - '+.yunqiyqh.com'
   - '+.yunque360.com'
   - '+.yunque365.com'
@@ -62438,7 +62427,6 @@ payload:
   - '+.zaixianjianli.com'
   - '+.zaixiankaoshi.com'
   - '+.zaixs.com'
-  - '+.zaixuchang.com'
   - '+.zaiyulin.com'
   - '+.zaiyunli.com'
   - '+.zaizai8.com'
@@ -63466,7 +63454,6 @@ payload:
   - '+.zhizuoh5.com'
   - '+.zhizuotu.com'
   - '+.zhj9.com'
-  - '+.zhjedu.com'
   - '+.zhjiameng.com'
   - '+.zhjj.org'
   - '+.zhjncb.com'
@@ -63735,7 +63722,6 @@ payload:
   - '+.zhugeio.com'
   - '+.zhuhaihaofang.com'
   - '+.zhuhaily.com'
-  - '+.zhuhaimy.com'
   - '+.zhuhd.win'
   - '+.zhuhongliang.com'
   - '+.zhuiguang.com'
@@ -64018,7 +64004,6 @@ payload:
   - '+.zixuekaoshi.net'
   - '+.zixuephp.net'
   - '+.ziy.cc'
-  - '+.ziyadiaoyu.com'
   - '+.ziyainfo.com'
   - '+.ziyan666.com'
   - '+.ziyanfoods.com'
@@ -64413,7 +64398,6 @@ payload:
   - '+.zolsky.com'
   - '+.zombiescat.com'
   - '+.zomiu.com'
-  - '+.zomvip.com'
   - '+.zomzone.com'
   - '+.zon100.com'
   - '+.zone139.com'
@@ -64831,6 +64815,7 @@ payload:
   - '+.zwcnw.com'
   - '+.zwcsm.com'
   - '+.zwda.com'
+  - '+.zwdn.com'
   - '+.zwdns.com'
   - '+.zwds.cc'
   - '+.zwdsty.com'
